--- a/profile.html
+++ b/profile.html
@@ -10,6 +10,23 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <style>
+      .btn-custom {
+        background-color: #333333;
+        color: white;
+        border: 1px solid transparent;
+        text-decoration: none;
+        padding: 0.5rem 1rem;
+      }
+
+      .btn-custom:hover,
+      .btn-custom:focus,
+      .btn-custom:active {
+        background-color: white;
+        color: grey;
+        border-color: white;
+      }
+    </style>
   </head>
   <body
     class="bg-dark"
@@ -112,13 +129,9 @@
         </div>
         <hr />
         <div class="d-flex gap-3">
-          <a class="border text-decoration-none p-1 text-white px-4" href="#" style="background-color: #333333">SAVE</a>
-          <a class="border text-decoration-none p-1 text-white px-4" href="#" style="background-color: #333333"
-            >CANCEL</a
-          >
-          <a class="border text-decoration-none p-1 text-white px-4" href="#" style="background-color: #333333"
-            >DELETE PROFILE</a
-          >
+          <a class="btn-custom" href="#">SAVE</a>
+          <a class="btn-custom" href="#">CANCEL</a>
+          <a class="btn-custom" href="#">DELETE PROFILE</a>
         </div>
       </div>
     </main>
