--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
           <div class="row">
             <div class="row col-6">
                  <div class="row">
-                      <div class="col-5" ><h2>TV Shows</h2></div>
-                      <div class="col-4">
+                      <div class="col-12 col-sm-12 col-md-12 col-lg-6" ><h2>TV Shows</h2></div>
+                      <div class="col-12 col-sm-12 col-md-12 col-lg-4">
                       <select class="form-select bg-black" aria-label="Default select example">
                           <option selected>Genres</option>
                           <option value="1">Horror</option>
@@ -123,10 +123,10 @@
           <section class=" my-3">
               <h4 class="mt-4 mb-2">Trending Now</h4>
               <div class="row g-1">
-                <div class="col-12 col-sm-12 col-md-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media0.webp" alt="movie" style="width: 100%;"></div>
-                <div class="col-12 col-sm-12 col-md-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media1.jpg" alt="movie" style="width: 100%;"></div>
-                <div class="col-12 col-sm-12 col-md-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media2.webp" alt="movie" style="width: 100%;"></div>
-                <div class="col-12 col-sm-12 col-md-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media3.webp" alt="movie" style="width: 100%;"></div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media0.webp" alt="movie" style="width: 100%;"></div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media1.jpg" alt="movie" style="width: 100%;"></div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media2.webp" alt="movie" style="width: 100%;"></div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media3.webp" alt="movie" style="width: 100%;"></div>
                 <div class="col-12 col-sm-12 col-md-6 d-md-none d-xl-block col-xl-2 col-xxl-2 "><img src="./img/assets/media/media4.jpg" alt="movie" style="width: 100%;"></div>
                 <div class="col-12 col-sm-12 col-md-6 d-md-none d-xl-block col-xl-2 col-xxl-2 "><img src="./img/assets/media/media5.webp" alt="movie" style="width: 100%;"></div>
               </div>
@@ -135,10 +135,10 @@
           <section class=" my-3">
              <h4 class="mt-4 mb-2">Watch It Again</h4>
              <div class="row g-1">
-                 <div class="col-12 col-sm-12 col-md-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media7.webp" alt="movie" style="width: 100%;"></div>
-                 <div class="col-12 col-sm-12 col-md-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media8.webp" alt="movie" style="width: 100%;"></div>
-                 <div class="col-12 col-sm-12 col-md-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media9.jpg" alt="movie" style="width: 100%;"></div>
-                 <div class="col-12 col-sm-12 col-md-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media10.jpg" alt="movie" style="width: 100%;"></div>
+                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media7.webp" alt="movie" style="width: 100%;"></div>
+                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media8.webp" alt="movie" style="width: 100%;"></div>
+                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media9.jpg" alt="movie" style="width: 100%;"></div>
+                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media10.jpg" alt="movie" style="width: 100%;"></div>
                  <div class="col-12 col-sm-12 col-md-6 d-md-none d-xl-block col-xl-2 col-xxl-2 "><img src="./img/assets/media/media11.jpg" alt="movie" style="width: 100%;"></div>
                  <div class="col-12 col-sm-12 col-md-6 d-md-none d-xl-block col-xl-2 col-xxl-2 "><img src="./img/assets/media/media12.jpg" alt="movie" style="width: 100%;"></div>
              </div>
@@ -147,10 +147,10 @@
          <section class=" mt-3">
              <h4 class="mt-4 mb-2">New Releases</h4>
               <div class="row g-1">
-                 <div class="col-12 col-sm-12 col-md-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media14.webp" alt="movie" style="width: 100%;"></div>
-                 <div class="col-12 col-sm-12 col-md-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media15.jpg" alt="movie" style="width: 100%;"></div>
-                 <div class="col-12 col-sm-12 col-md-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media16.webp" alt="movie" style="width: 100%;"></div>
-                 <div class="col-12 col-sm-12 col-md-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media17.jpg" alt="movie" style="width: 100%;"></div>
+                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media14.webp" alt="movie" style="width: 100%;"></div>
+                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media15.jpg" alt="movie" style="width: 100%;"></div>
+                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media16.webp" alt="movie" style="width: 100%;"></div>
+                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media17.jpg" alt="movie" style="width: 100%;"></div>
                  <div class="col-12 col-sm-12 col-md-6 d-md-none d-xl-block col-xl-2 col-xxl-2 "><img src="./img/assets/media/media18.jpg" alt="movie" style="width: 100%;"></div>
                  <div class="col-12 col-sm-12 col-md-6 d-md-none d-xl-block col-xl-2 col-xxl-2 "><img src="./img/assets/media/media19.webp" alt="movie" style="width: 100%;"></div>
              </div>
@@ -158,10 +158,10 @@
          <section class=" mt-3">
             <h4 class="mt-4 mb-2">Preview</h4>
              <div class="row g-1">
-                <div class="col-12 col-sm-12 col-md-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media20.jpg" alt="movie" style="width: 100%;"></div>
-                <div class="col-12 col-sm-12 col-md-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media21.webp" alt="movie" style="width: 100%;"></div>
-                <div class="col-12 col-sm-12 col-md-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media22.webp" alt="movie" style="width: 100%;"></div>
-                <div class="col-12 col-sm-12 col-md-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media23.webp" alt="movie" style="width: 100%;"></div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media20.jpg" alt="movie" style="width: 100%;"></div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media21.webp" alt="movie" style="width: 100%;"></div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media22.webp" alt="movie" style="width: 100%;"></div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-2 col-xxl-2 "><img src="./img/assets/media/media23.webp" alt="movie" style="width: 100%;"></div>
                 <div class="col-12 col-sm-12 col-md-6 d-md-none d-xl-block col-xl-2 col-xxl-2 "><img src="./img/assets/media/media24.jpg" alt="movie" style="width: 100%;"></div>
                 <div class="col-12 col-sm-12 col-md-6 d-md-none d-xl-block col-xl-2 col-xxl-2 "><img src="./img/assets/media/media25.webp" alt="movie" style="width: 100%;"></div>
             </div>
