--- a/profile.html
+++ b/profile.html
@@ -52,7 +52,7 @@
   >
     <header class="container">
       <div class="container-fluid px-5">
-        <a class="navbar-brand" href="#"><img src="./img/assets/netflix_logo.png" style="width: 150px" /></a>
+        <a class="navbar-brand" href="./index.html"><img src="./img/assets/netflix_logo.png" style="width: 150px" /></a>
       </div>
     </header>
     <main class="container text-light d-flex justify-content-center" data-bs-theme="dark">
