--- a/setting.html
+++ b/setting.html
@@ -12,6 +12,84 @@
     />
   </head>
   <body>
+    <header class="container">
+        <nav class="navbar navbar-expand-lg bg-dark px-4" data-bs-theme="dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="./img/assets/netflix_logo.png" style="width: 90px" /></a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">TV Shows</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link">Movies</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link">Recently Added</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link">My List</a>
+                </li>
+           </ul>
+  
+               <ul class="navbar-nav mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                      <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" fill="white"/>
+                    </svg></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="#">KIDS</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bell-fill" viewBox="0 0 16 16">
+                      <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2m.995-14.901a1 1 0 1 0-1.99 0A5 5 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901" fill="white"/>
+                    </svg></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="#"
+                    ><img
+                      src="https://media.licdn.com/dms/image/D4D03AQE7LaHItv4lEA/profile-displayphoto-shrink_800_800/0/1711433459971?e=1723075200&v=beta&t=8UjxIjNg97GhiNb8oMaIixEqKQzEqfvxasPTmIOoRmw"
+                      class="img-fluid" style="width: 25px;" 
+                  /></a>
+                   <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="https://www.netflix.com/login">HomePage</a></li>
+                    <li><a class="dropdown-item" href="./profile.html">Profile</a></li>
+                    <li><a class="dropdown-item" href="./setting.html">Setting</a></li>
+                    <li><hr class="dropdown-divider" /></li>
+                    <li><a class="dropdown-item" href="https://www.netflix.com/login">Log-Out</a></li>
+                  </ul>
+                  </li>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
+    <h1>TE LO FACCIO DOMANI</h1>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
