--- a/setting.html
+++ b/setting.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <header class="container">
+    <header>
         <nav class="navbar navbar-expand-lg bg-dark px-4" data-bs-theme="dark">
           <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="./img/assets/netflix_logo.png" style="width: 90px" /></a>
