--- a/setting.html
+++ b/setting.html
@@ -11,11 +11,11 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
-    <header>
+  <body class="">
+    <header class="container-fluid px-0">
         <nav class="navbar navbar-expand-lg bg-dark px-4" data-bs-theme="dark">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="./img/assets/netflix_logo.png" style="width: 90px" /></a>
+            <a class="navbar-brand" href="./index.html"><img src="./img/assets/netflix_logo.png" style="width: 90px" /></a>
             <button
               class="navbar-toggler"
               type="button"
@@ -46,7 +46,7 @@
                 </li>
            </ul>
   
-               <ul class="navbar-nav mb-2 mb-lg-0">
+               <ul class="navbar-nav mb-2 mb-lg-0 me-5">
                 <li class="nav-item">
                   <a class="nav-link" aria-current="page" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                       <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" fill="white"/>
